--- a/index.html
+++ b/index.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
-<html lang="en"  onclick="jump()" onkeypress="jump()">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FlappyJS</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-     <div id="block"></div>
-     <div id="hole"></div>
-     <div id="character"></div>
 
-    </div>
-    <script src = "script.js"></script>
+<html lang="en" onclick="jump()">
+
+<head>
+
+<meta charset="UTF-8">
+
+<title>Flappy Bird</title>
+
+<link rel="stylesheet" href="style.css">
+
+</head>
+
+<body>
+
+<div id="game">
+
+<div id="block"></div>
+
+<div id="hole"></div>
+
+<div id="character"></div>
+
+</div>
+
 </body>
+
+<script src="script.js"></script>
+
 </html>
